fix: resolved overflow issue on remove accout flow

--- a/src/modules/account/components/ManageAccounts/ManageAccounts.css
+++ b/src/modules/account/components/ManageAccounts/ManageAccounts.css
@@ -16,7 +16,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 30px;
+  padding: 10px;
   box-sizing: border-box;
   background-color: var(--color-white);
   border-radius: 16px;
